sorting out some spacing issues

--- a/assets/styles/components/_elements.scss
+++ b/assets/styles/components/_elements.scss
@@ -50,18 +50,31 @@ blockquote p {
   margin: 0px;
 }
 
+div.poem {
+  margin-left: 3em;
+  font-size: 0.85em;
+  line-height: 1.2em;
+  margin-bottom: 1em;
+}
+
+div.poem p{
+  text-indent: 0px;
+}
+
 .quote-cite {
-  margin-top: 0px;
+  margin-top: -0.3em;
   margin-bottom: 0.5em;
   margin-left:2.5em;
   font-style: italic;
   text-align: right;
+  font-size: 0.85em;
 }
 
 .quote-cite p {
   margin-top: 0px;
   font-style: italic;
   text-align: right;
+  text-indent: 0px;
 }
 
 .page-num {
@@ -75,7 +88,8 @@ blockquote p {
 
 sup.footnote {
   vertical-align: super;
-  font-size: 0.85em;
+  font-size: 0.7em;
+  font-style: normal;
 }
 
 div.footnotes {
@@ -83,16 +97,6 @@ div.footnotes {
   line-height: 1.1em;
   margin-bottom: 1em;
   margin-top: 1em;
-}
-
-div.poem {
-  margin-left: 3em;
-  font-size: 0.85em;
-  line-height: 1.2em
-}
-
-div.poem p{
-  text-indent: 0px;
 }
 
 div.printer-info {
@@ -116,25 +120,6 @@ li.front-matter a{
 li.chapter {
  margin-top: 0px;
 }
-
-#content div.index-taxons {
- @media screen and (min-width: 768px) {
-  position: absolute;
-  right: -177px;
-  top: 300px;
-//  bottom: 0px;
-  width: 170px;
-  border-radius: 0 6px 6px 0;
-  box-shadow: 2px 2px 2px #ddd;
- }
- font-family: Arial;
- z-index: -1;
- font-size: 0.6em;
- background-color: #fff;
- border-style: none;
- margin: 10 100 0 0px;
- border: 0px;
- padding: 10px 0 0 4px;
 
 //sorting out shadow border
 
